fixed notify z-index

--- a/src/components/DrawingList/style.scss
+++ b/src/components/DrawingList/style.scss
@@ -70,7 +70,7 @@
         background-color: #ffffff;
         color: #00A7FF;
         transition: 0.1s;
-        z-index: 1000;
+        z-index: 100;
       }
       &-content {
         height: 300px;
