--- a/src/components/common/Notify/style.scss
+++ b/src/components/common/Notify/style.scss
@@ -7,7 +7,7 @@
   text-align: center;
   opacity: 0;
   transition: 0.4s;
-  z-index: 100;
+  z-index: 200;
 }
 
 .notify-slide {
